--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.row {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  overflow-x: auto;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.column {
+  flex: 0 0 24%; 
+  padding: 20px;
+  min-width: 250px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.3s ease, opacity 0.2s ease;
+  width: 100%; 
+  padding: 10px;
+  margin-bottom: 15px;
+  background-color: white;
+}
+
+.card:active {
+  background-color: ghostwhite;
+  border: 1px solid black;
+  box-shadow: inset 0 0 2px black;
+}
+
+.card.dragging {
+  opacity: 0.5;
+}
+
+.card.hide {
+  opacity: 0;
+  transition: opacity 0.2s ease;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px gray;
+  cursor: grab;
+}
+
+.hidecard {
+  display: none;
+}
+
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
